@@ -1,5 +1,11 @@
 2006-04-06  Rodney Dawes  <dobey@novell.com>
 
+	* 48x48/stock/generic/Makefile.am:
+	* 48x48/stock/generic/stock_weather*: Remove the stock_weather icons
+	from here, as they are replaced by the weather-* icons in status
+
+2006-04-06  Rodney Dawes  <dobey@novell.com>
+
 	* 16x16/stock/generic/Makefile.am:
 	* 16x16/stock/generic/stock_weather*: Remove the stock_weather icons
 	from here, as they are replaced by the weather-* icons in status
